[add] styles for table [add] registration user [add] rest api

--- a/core/templates/core/list.html
+++ b/core/templates/core/list.html
@@ -40,10 +40,13 @@
                 {% endfor %}
             {% endwith %}
             <td>
-                <a href="{% url 'del_user' user.id %}">Delete</a>
+
             </td>
         </tr>
       {% endfor %}
       </tbody>
     </table>
+    <div>
+        <a href="{% url 'create_user' %}">Add new user</a>
+    </div>
 {% endblock %}
