--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-.inline {
-    display: inline-block;
-}
-
 TABLE {
     width: 600px;
     border-collapse: collapse;
@@ -11,7 +7,9 @@ TD, TH {
     padding: 30px;
     border: 1px solid black;
 }
-
+TD {
+    cursor: pointer;
+}
 TH {
     background: orange;
 }
